# TagGame

./: Cargo.toml  LICENSE  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  grcov.yml  test.yml
examples/tag/: README.md  agent.rs  config.json  config.rs  config.template.json  main.rs  output.rs  state.rs  world.rs
examples/tag/scripts/: agent.lua  world.lua
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/drop/: trait.Drop.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/tag_game/: trait.World.js
src/: agent.rs  behavior.rs  lib.rs  simulation.rs  state.rs  world.rs
src/script/: lua.rs  mod.rs
src/tag_game/: agent.rs.html  behavior.rs.html  lib.rs.html  main.rs.html  simulation.rs.html  state.rs.html  world.rs.html
tag_game/: all.html  fn.main.html  index.html  sidebar-items.js  struct.Agent.html  struct.Id.html  struct.Simulation.html  trait.Agent.html  trait.Behavior.html  trait.State.html  trait.World.html
tag_game/agent/: struct.Agent.html  trait.Agent.html
tag_game/behavior/: trait.Behavior.html
tag_game/simulation/: struct.Id.html  struct.Simulation.html
tag_game/state/: trait.State.html
tag_game/world/: trait.World.html
(+2 files in other folders)
