[package]
name = "tag_game"
version = "0.1.0"
edition = "2018"
description = "Agent-Based implementation for the game \"Tag\""
repository = "https://github.com/TimDiekmann/TagGame"
license = "MIT OR Apache-2.0"
keywords = ["agent", "agent-based", "game", "tag"]
categories = ["games"]
publish = false

[dev-dependencies]
# serde = { version = "1.0", features = ["derive"]}
# serde_json = "1.0"

[[example]]
name = "tag"
