[package]
name = "tag_game"
version = "0.5.0"
edition = "2018"
description = "Agent-Based implementation for the game \"Tag\""
repository = "https://github.com/TimDiekmann/TagGame"
license = "MIT OR Apache-2.0"
keywords = ["agent", "agent-based", "game", "tag"]
categories = ["games"]
publish = false

[dependencies]
mlua = { version = "0.6", features = ["send", "serialize", "luajit"], optional = true }
serde = { version = "1.0", features = ["derive"]}

[dev-dependencies]
rand = "0.8"
termion = "1.5"
serde_json = "1.0"

[features]
default = ["mlua"]

[[example]]
name = "tag"
